welcome_app_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-svc
  labels:
    app: welcome-app-yml
spec:
  type: NodePort
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: welcome-app-yml
